keycloak/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak
spec:
  ports:
  - name: keycloak
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
