keycloak/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  to:
    kind: Service
    name: keycloak
